1. Collection API Улучшения[#108141]