@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -25,7 +23,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -43,13 +41,11 @@ public class ConvertList2ArrayTest {
     public void when2ArraysWithSize25ThenListWith7Elements() {
         ConvertList2Array converter = new ConvertList2Array();
 
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6, 7});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6, 7});
 
         List<Integer> result = converter.convert(list);
 
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7);
         assertThat(result, is(expect));
     }
 }
