@@ -21,10 +21,12 @@ public class DepartmentSortTest {
      */
     @Test
     public void whenSortedDepartmentsAsc() {
-        String[] departments = new String[]{"K2", "K1\\SK1", "K1\\SK2", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2", "K2\\SK1\\SSK1", "K2\\SK1\\SSK2"};
+        String[] departments = new String[]{"K2", "K1\\SK1", "K1\\SK2", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2",
+                "K2\\SK1\\SSK1", "K2\\SK1\\SSK2"};
         DepartmentSort sorting = new DepartmentSort();
         List<String> result = sorting.sortDepartmentAsc(departments);
-        List<String> expected = new ArrayList<>(Arrays.asList("K1", "K1\\SK1", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2", "K1\\SK2", "K2", "K2\\SK1", "K2\\SK1\\SSK1", "K2\\SK1\\SSK2"));
+        List<String> expected = List.of("K1", "K1\\SK1", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2", "K1\\SK2",
+                "K2", "K2\\SK1", "K2\\SK1\\SSK1", "K2\\SK1\\SSK2");
         assertThat(result, is(expected));
     }
 
@@ -33,10 +35,12 @@ public class DepartmentSortTest {
      */
     @Test
     public void whenSortedDepartmentsDesc() {
-        String[] departments = new String[]{"K2", "K1\\SK1", "K1\\SK2", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2", "K2\\SK1\\SSK1", "K2\\SK1\\SSK2"};
+        String[] departments = new String[]{"K2", "K1\\SK1", "K1\\SK2", "K1\\SK1\\SSK1", "K1\\SK1\\SSK2",
+                "K2\\SK1\\SSK1", "K2\\SK1\\SSK2"};
         DepartmentSort sorting = new DepartmentSort();
         List<String> result = sorting.sortDepartmentDesc(departments);
-        List<String> expected = new ArrayList<>(Arrays.asList("K2", "K2\\SK1", "K2\\SK1\\SSK2", "K2\\SK1\\SSK1", "K1", "K1\\SK2", "K1\\SK1", "K1\\SK1\\SSK2", "K1\\SK1\\SSK1"));
+        List<String> expected = List.of("K2", "K2\\SK1", "K2\\SK1\\SSK2", "K2\\SK1\\SSK1",
+                "K1", "K1\\SK2", "K1\\SK1", "K1\\SK1\\SSK2", "K1\\SK1\\SSK1");
         assertThat(result, is(expected));
     }
 }
